PR/42201: NAKAJIMA Yoshihiro: fts(3): broken compatibility As new field types were added, we did not provide overrides for older compat versions. This restores compatibility.