lib/libc/compat/gen/compat___fts30.c
@@ -1,8 +1,10 @@
-/*	$NetBSD: compat___fts30.c,v 1.2 2006/07/27 15:46:30 christos Exp $	*/
+/*	$NetBSD: compat___fts30.c,v 1.3 2009/10/19 17:52:04 christos Exp $	*/
 
 #include "namespace.h"
 #include <sys/cdefs.h>
 #include <dirent.h>
+
+#define	__LIBC12_SOURCE__
 
 __warn_references(__fts_children30,
     "warning: reference to compatibility __fts_children30();"
@@ -21,25 +23,34 @@ __warn_references(__fts_set30,
     " include <fts.h> for correct reference")
 
 #include <sys/stat.h>
+#include <compat/sys/time.h>
+#include <compat/sys/stat.h>
 
+#define	__fts_stat_t	struct stat30
 #define	__fts_length_t	u_short
 #define	__fts_number_t	long
+#define	__fts_dev_t	uint32_t
+#define	__fts_level_t	short
 
-#undef fts_children
-#define fts_children __fts_children30
-#undef fts_close
-#define fts_close __fts_close30
-#undef fts_open
-#define fts_open  __fts_open30
-#undef fts_read
-#define fts_read __fts_read30
-#undef fts_set
-#define fts_set __fts_set30
+#define	stat		__stat30
+#define	lstat		__lstat30
+#define	fstat		__fstat30
 
-#define __LIBC12_SOURCE__
+#undef	fts_children
+#define	fts_children __fts_children30
+#undef	fts_close
+#define	fts_close __fts_close30
+#undef	fts_open
+#define	fts_open  __fts_open30
+#undef	fts_read
+#define	fts_read __fts_read30
+#undef	fts_set
+#define	fts_set __fts_set30
+
 #include <fts.h>
 #include <compat/include/fts.h>
 
 #define	__FTS_COMPAT_LENGTH
+#define	__FTS_COMPAT_LEVEL
 
 #include "gen/fts.c"
